styles/site.css
.profile_pic{
  height: 300px;
  float: right;
}

.timeline{
  height: 20%;
  padding-top: 0%;
}

.skills{
  display: block;
  margin-left: auto;
  margin-right: auto;
  /* width: 50%; */
}

/* .gallery{
  height: 300px;
  float: right;
} */

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create four equal columns that sits next to each other */
.column {
  flex: 25%;
  max-width: 25%;
  padding: 0 4px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}
header {
  padding: 1px 0 30px 0;
  
  
}

header .title {
  padding: 10px;
}

nav {
  text-align: center;
  font-size: x-large;
}

nav ul {
  display: inline-block;
    list-style-type: none;
}

nav li {
  margin: 0;
  padding: 10px;
  display: inline;
  align-content: center;
  justify-content: center;
}

footer {
  /* padding: 10px 10px; */
  background: rgba(211, 211, 211, 0.5);
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
}

body {
  margin: 0 auto;
}

main {
  padding: 10px;
}


/* ================================================================================================================= */

html, body {
  position: relative;
  height: 100%;
  overflow: hidden;
  /* background: #eee; */
}
body {
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
}
.swiper-container-wrapper--timeline .swiper-slide {
  display: block;
  text-align: center;
  vertical-align: middle;
  background: rgba(211, 211, 211, 0.5);
  min-height: 100px;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
}
.swiper-container-wrapper--timeline .swiper-slide .container {
  padding: 0;
  width: 100%;
}
.swiper-container-wrapper--timeline .swiper-slide .title {
  font-size: 18px;
  opacity: 0;
  transition: 0.5s ease 0.5s;
}
.swiper-container-wrapper--timeline .swiper-slide-active .title {
  opacity: 1;
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar {
  position: relative;
  margin-bottom: 70px;
  background-color: transparent;
  height: 4px;
  border-bottom: 1px solid #888;
  width: 75%;
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar-fill {
  background-color: #000;
  height: 3px;
  top: 2px;
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar:before {
  position: absolute;
  top: 2px;
  left: -100%;
  width: 100%;
  height: 3px;
  background-color: #000;
  content: "";
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar:after {
  position: absolute;
  top: 3px;
  right: -100%;
  width: 100%;
  height: 1px;
  background-color: #888;
  content: "";
}
.swiper-container-wrapper--timeline .swiper-pagination-custom {
  position: relative;
  list-style: none;
  margin: 1rem 0;
  padding: 0;
  display: flex;
  line-height: 1.66;
  bottom: 0;
  z-index: 11;
  width: 75%;
  display: flex;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch {
  position: relative;
  width: 100%;
  height: 30px;
  line-height: 30px;
  display: block;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title {
  position: absolute;
  font-weight: 400;
  right: 0;
  transform: translateX(50%);
  transition: 0.2s all ease-in-out;
  transition-delay: 0s;
  cursor: pointer;
  z-index: 1;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title:after {
  position: absolute;
  top: calc(100% + 19px);
  right: 50%;
  transform: translateX(50%) translateY(-50%);
  width: 12px;
  height: 12px;
  background: #000;
  border-radius: 2rem;
  content: "";
  transition: 0.2s all ease-in-out;
  transition-delay: 0s;
  z-index: 1;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title {
  font-weight: 400;
  transition-delay: 0.4s;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title:after {
  background: #000;
  width: 25px;
  height: 25px;
  transition-delay: 0.4s;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title {
  color: #888;
  font-weight: 16px;
}
.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title:after {
  background: #888;
}

